no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -39,6 +39,7 @@ node[js] -e|--eval|-p|--print STR [--] [ARGS]   #nodejs is symlink to node (pref
                                                 #FILE is JavaScript file (def: stdin). Can be - too
                                                 #With -e, evaluates STR
                                                 #With -p, evaluates STR, and prints last return value.
+                                                #  - cannot be used with --input-type=module
                                                 #All CLI flags can use underscores instead of dashes
 NODE_OPTIONS=--OPT,... ENVVAR                   #Same as using node --OPT ...
 --v8-options                                    #Prints available v8 options.
