no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -535,8 +535,8 @@ import 'node:ID'                                #Same as import 'ID' (core modul
 
 
 require(STR)                                    #Load file STR:
--r STR                                          #  - 'ID': core module
---require STR                                   #  - 'FILE' (absolute or relative)
+                                                #  - 'ID': core module
+                                                #  - 'FILE' (absolute or relative)
                                                 #  - 'DIR' (absolute or relative):
                                                 #     - DIR/package.json, using main 'PATH' (relative to DIR)
                                                 #     - DIR/index[.EXT]
@@ -551,6 +551,8 @@ require(STR)                                    #Load file STR:
                                                 #  - code "MODULE_NOT_FOUND"
                                                 #  - requireStack 'PATH'_ARR
 MODULE.require(...)                             #Reference to require(...)
+-r|--require STR                                #Calls require()
+                                                #Only works with CommonJS
 
 require.resolve(STR[, OPTS])->'/PATH'           #How require(STR) would resolve, based on __filename.
                                                 #OPTS:
