no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #16.3.0 (current), 15.14.0 (maintenance), 14.17.1 (active LTS), 12.22.1 (maintenance)
+VERSION ==>                                     #16.4.0 (current), 15.14.0 (maintenance), 14.17.1 (active LTS), 12.22.1 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -1980,6 +1980,8 @@ lookup('HOST'[, OBJ], FUNC(ERROR, 'HOST', STR4))#DNS forward lookup.
                                                 #The ERROR.name can correspond to several DNS.*, like DNS.NOTFOUND, DNS.NODATA, DNS.NOMEM, etc. (see online doc)
 lookupService
 (IP, PORT, FUNC(ERROR, 'HOST', 'SCHEME'))       #
+setDefaultResultOrder(STR)               16.4.0*#
+--dns-result-order=STR                   16.4.0*#Default value for OPTS.verbatim: 'ipv4first' (def) or 'verbatim'
 
 new Resolver([OPTS])                            #RESOLVER
                                                 #OPTS:
@@ -2149,7 +2151,7 @@ CROSS-OS PERMISSIONS ==>                        #Windows permissions are not sup
 
 PATH|FILENAME|DIR                               #Either:
                                                 #  - STR
-                                                #  - URI (file: scheme)
+                                                #  - FILE_URL (not 'FILE_URL')
                                                 #  - BUFFER (less interoperable)
 f*                                              #Variant using file descriptior FD_INT
 l*                                              #Doesn't deference symlinks
@@ -2700,6 +2702,7 @@ hrtime.bigint()->BIGINT                         #Same but using BIGINT nanosecs 
 
 spawn(STR[, STR2_ARR][, OPTS])->CHILDPROCESS    #Creates and runs a CHILDPROCESS from command line "STR ...STR2_ARR"
                                                 #  - cwd STR (def: null, i.e. current)
+                                         16.4.0*#    or FILE_URL
                                                 #  - env OBJ (def: process.env)
                                                 #  - uid|gid UINT (def: current ones)
                                                 #  - encoding 'ENCODING' (def: "buffer")
@@ -2926,7 +2929,7 @@ MULTI-THREADING ==>                             #Uses threads not processes, i.e
                                                 #I.e. good for CPU-intensive tasks (not I/O intensive)
 
 
-new Worker(SCRIPT[, OPTS])                      #SCRIPT is 'PATH' or URL with file: scheme
+new Worker(SCRIPT[, OPTS])                      #SCRIPT is 'PATH' or FILE_URL
                                          14.9.0*#or with data: scheme
                                                 #OPTS:
                                                 #  - eval BOOL (def: false): use inline 'JAVASCRIPT' instead
