--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -39,7 +39,7 @@ ALTERNATIVES ==>                  #  - esprima:
                                   #  - cherow: not maintained
                                   #  - esprit: not maintained
 
-VERSION ==>                       #8.1.0
+VERSION ==>                       #8.4.0
                                   #Browser, Node.js or CLI
                                   #JavaScript parser and tokenizer
 
@@ -62,10 +62,11 @@ ACORN.parse('JS'[, OPTS])         #Parse JavaScript.
                                   #  - pos NUM (offset)
                                   #  - loc.line|column NUM
                                   #OPTS:
-                                  #  - ecmaVersion 3|5, 6-11 or 2015-2021 (required)
+                                  #  - ecmaVersion 3|5, 6-11 or 2015-2022 (required)
                                   #  - sourceType 'script|module' (def: 'script')
                                   #  - allowReturnOutsideFunction BOOL (def: false): top-level return
-                                  #  - allowAwaitOutsideFunction BOOL (def: false): top-level await
+                                  #  - allowAwaitOutsideFunction BOOL (def: true if >=es2022): top-level await
+                                  #  - allowSuperOutsideMethod BOOL (def: false): top-level `super`
                                   #  - allowImportExportEverywhere BOOL (def: false): non-top-level import|export
                                   #  - allowReserved BOOL|'never' (def: false): allow VAR that is a reserved keywords (true|false) or a OBJ.VAR ('never')
                                   #  - allowHashBang BOOL (def: false)
