no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -839,7 +839,7 @@ class ... {
   VAR[ = EXPR][, ...];                       -|~#Calls this.VAR = EXPR in constructor, in beginning, just after super()
                                              -|~#VAR can [STR]
   static VAR[ = EXPR][, ...];                -|~#Calls TYPE.VAR = EXPR right-away (in EXPR, this is TYPE)
-  [static] #VAR[ = EXPR][, ...];             -|~#Like VAR = EXPR and FUNC(...), except can only be refered to inside class,
+  [static] #VAR[ = EXPR][, ...];      14.6.0*-|~#Like VAR = EXPR and FUNC(...), except can only be refered to inside class,
   #FUNC(...) { ... }                  14.6.0*-|~#i.e. using this.#VAR and this.#FUNC(...). Not inherited.
 }                                            -|~#Can only be declared during class declaration.
 
