no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -689,7 +689,7 @@ Object.fromEntries(ITERABLE)                  -|#Inverse Object.entries(), i.e. 
 Object.getOwnPropertyNames(OBJ)                 #Returns own keys, including non-enumerable
 OBJ.propertyIsEnumerable('VAR')                 #Returns true if OBJ['VAR'] is in Object.keys()
 OBJ.hasOwnProperty('VAR')                       #Returns true if OBJ['VAR'] is in Object.getOwnPropertyNames()
-Object.hasOwn(OBJ, 'VAR')                    *-|#Same
+Object.hasOwn(OBJ, 'VAR')                   *-|~#Same
 
 'VAR' in OBJ                                    #Returns true if OBJ['VAR'] is member, including shared or non-enumerable.
                                                 #Negation: !('VAR' in OBJ)
@@ -836,12 +836,12 @@ class [TYPE] [extends TYPE_PARENT] {          -|#Other syntax to define inherita
                                               -|#Returns TYPE
                                               -|#TYPE_PARENT can be a value, not only an identifier
 class ... {
-  VAR[ = EXPR][, ...];                       -|~#Calls this.VAR = EXPR in constructor, in beginning, just after super()
-                                             -|~#VAR can [STR]
-  static VAR[ = EXPR][, ...];                -|~#Calls TYPE.VAR = EXPR right-away (in EXPR, this is TYPE)
-  [static] #VAR[ = EXPR][, ...];      14.6.0*-|~#Like VAR = EXPR and FUNC(...), except can only be refered to inside class,
-  #FUNC(...) { ... }                  14.6.0*-|~#i.e. using this.#VAR and this.#FUNC(...). Not inherited.
-}                                            -|~#Can only be declared during class declaration.
+  VAR[ = EXPR][, ...];                        -|#Calls this.VAR = EXPR in constructor, in beginning, just after super()
+                                              -|#VAR can [STR]
+  static VAR[ = EXPR][, ...];                 -|#Calls TYPE.VAR = EXPR right-away (in EXPR, this is TYPE)
+  [static] #VAR[ = EXPR][, ...];       14.6.0*-|#Like VAR = EXPR and FUNC(...), except can only be refered to inside class,
+  #FUNC(...) { ... }                   14.6.0*-|#i.e. using this.#VAR and this.#FUNC(...). Not inherited.
+}                                             -|#Can only be declared during class declaration.
 
 super                                         -|#Inside class {...}, same as TYPE_PARENT
 
@@ -1270,6 +1270,11 @@ new Intl.DisplayNames([LOCALEOPTS])        14*-|#Language string translation
                                            14*-|#     - 'language' (e.g. 'fr' or 'fr-CA' to 'French' or 'Canadian French')
                                            14*-|#     - 'script' (ISO-15924, e.g. 'Latn' or 'Arab' to 'Latin' or 'Arabic')
                                            14*-|#     - 'currency' (ISO-4217, e.g. 'USD' to 'US Dollar')
+                                            *-~|#     - 'calendar' (calendar name, e.g. 'gregory' to 'Gregorian Calendar')
+                                            *-~|#     - 'dateTimeField' ('era|year|month|quarter|weekOfYear|weekday|dayPeriod|day|hour|minute|second'
+                                            *-~|#  - languageDisplay STR:
+                                            *-~|#     - when using type 'language'
+                                            *-~|#     - either 'dialect' (def, 'British English') or 'standard' ('English (United Kingdom)')
 DISPLAYNAMES.of(STR)->STR2                 14*-|#
 
 new Intl.NumberFormat([LOCALEOPTS])         -|||#Number locale formatting.
@@ -1353,7 +1358,13 @@ new Intl.DateTimeFormat([LOCALEOPTS])       -|||#Date|Time|Date+Time locale form
                                             -|||#  - weekday|era 'narrow|short|long' (no def)
                                             -|||#  - month 'numeric|2-digit|narrow|short|long' (no def)
                                             -|||#  - year|day|hour|minute|second 'numeric|2-digit' (no def)
-                                            -|||#  - timeZoneName 'short|long' (no def)
+                                            -|||#  - timeZoneName (no def) among:
+                                            -|||#     - 'short'
+                                          *-|||~#       or 'shortOffset': 'GMT-8'
+                                          *-|||~#     - 'longOffset': 'GMT-0800'
+                                          *-|||~#     - 'shortGeneric': 'PT'
+                                            -|||#     - 'long'
+                                          *-|||~#       or 'longGeneric': 'Pacific Time'
                                             -|||#  - timeStyle 'short' (HH:MM), 'medium' (HH:MM:SS), 'long' (HH:MM:SS Z), 'full' (HH:MM:SS ZZZZ)
                                             -|||#  - dateStyle 'short' (D/M/YY), 'medium' (MMM D, YYYY), 'long' (MMMM D, Y), 'full' (Tuesday, MMMM D, Y)
                                             -|||#Relevant LOCALE_ARGS: nu, ca
@@ -1464,7 +1475,7 @@ SEGMENTS.containing(NUM)
                                               -|#       i.e. match any character including: LF CR U+2028 U+2029
                                               -|#     - y: same as g, with ^ in beginning of PATTERN
                                               -|#     - u: see above
-                                      *16.0.0-|~#     - d: enable ARR.indices with REGEXP.exec()
+                                       *16.0.0-|#     - d: enable ARR.indices with REGEXP.exec()
                                                 #  - available at REGEXP.ignoreCase|global|multiline|sticky BOOL
 REGEXP.source                                   #'PATTERN' (read-only)
 REGEXP.flags                                  -|#'FLAGS' (read-only)
@@ -1475,8 +1486,8 @@ REGEXP.exec(STR)                                #Search REGEXP in STR and return
                                                 #  - ARR.index: first match index
                                                 #  - ARR.input: STR
                                               -|#  - ARR.groups.GROUP: STR (see (?<GROUP>))
-                                      *16.0.0-|~#  - ARR.indices[0|NUM], ARR.indices.groups.GROUP: like ARR[0|NUM], ARR.groups.GROUP
-                                      *16.0.0-|~#    but as start|end indices [NUM2, NUM3] instead of STR
+                                       *16.0.0-|#  - ARR.indices[0|NUM], ARR.indices.groups.GROUP: like ARR[0|NUM], ARR.groups.GROUP
+                                       *16.0.0-|#    but as start|end indices [NUM2, NUM3] instead of STR
 REGEXP.test(STR)                                #Returns BOOL
 
 
@@ -1569,7 +1580,7 @@ ARR.entries()                                 -|#Returns all [INDEX, VAL] as ITE
                                              \=+===============================+=/
 
 
-new ArrayBuffer(UINT)                           #Raw data chunk (initially filled with zeros). UINT is byteLength.
+new ArrayBuffer(UINT[, OPTS])                   #Raw data chunk (initially filled with zeros). UINT is byteLength.
                                                 #Needs a DATAVIEW|TYPED_ARR to be manipulated, which gives:
                                                 #  - a specific type to read it
                                                 #  - an offset from the beginning of it
@@ -1577,9 +1588,20 @@ new ArrayBuffer(UINT)                           #Raw data chunk (initially fille
                                                 #  - DATAVIEW: can change type
                                                 #  - TYPED_ARR: more convenient because manipulated as an ARR
                                                 #Several DATAVIEW|TYPED_ARR can be applied to a single ARRBUFFER.
+                                                #OPTS:
+                                            *-|~#  - maximumByteLength NUM (def: UINT)
 ArrayBuffer.isView(OBJ)                         #True if DATAVIEW|TYPED_ARR
 ARRBUFFER.byteLength                            #Readonly.
                                                 #This is different from STR.length which returns number of characters
+ARRBUFFER.maximumByteLength                 *-|~#Readonly. Set by OPTS.maximumByteLength
+                                            *-|~#Maximum size to resize() to (def: UINT)
+                                            *-|~#Allocates memory right away, i.e. more efficient
+                                            *-|~#Set to byteLength (not resizable) in return values of slice|transfer()
+ARRBUFFER.resize(UINT)                      *-|~#Must be < maximumByteLength
+ARRBUFFER.resizable                         *-|~#Readonly. BOOL. True if OPTS.maximumByteLength > UINT specified
+ARRBUFFER.transfer([UINT])->ARRBUFFER2      *-|~#Returns new ARRBUFFER2 with same underlying data chunk, but potentially
+                                            *-|~#different byteLength UINT (def: same, cannot be higher).
+                                            *-|~#ARRBUFFER is reset (byteLength|maximumByteLength 0)
 ARRBUFFER.slice(...)                            #Like ARR.slice(...)
 
 ARRAYBUFFERVIEW                                 #DATAVIEW|TYPED_ARR
@@ -1633,6 +1655,7 @@ new SharedArrayBuffer(UINT)                    -#Can be used like an ARRBUFFER i
                                                -#  - must be manipulated using Atomics.*() to ensure thread-safety:
                                                -#     - provide correct atomicity and order, underlyingly using a lock
                                                -#  - cannot be used with DataView, and no SharedArrayBuffer.isView()
+                                               -#  - resize|resizable -> grow|growable (cannot shrink)
 
 Atomics.load(S_ARRBUFFER, NUM)->VAL            -#Like S_ARRBUFFER[NUM]
 Atomics.store(S_ARRBUFFER, NUM, VAL)->VAL      -#Like S_ARRBUFFER[NUM] = VAL
@@ -1933,7 +1956,7 @@ await PROMISABLE|VAL                          -|#Inside async FUNC:
                                               -|#     - if PROMISABLE value returns PROMISABLE2, use PROMISABLE2 value instead
                                               -|#     - VAL is like Promise.resolve(VAL)
                                               -|#  - then returns|throws PROMISABLE value
-                                          14*-|~#Can be in top-level scope too
+                                       14.8.0*-|#Can be in top-level scope too
 
 ASYNC_ITERATOR                                -|#ITERATOR whose next|return|throw(...)->PROMISE(VAL) (instead of returning|throwing VAL)
 ASYNC_ITERABLE                                -|#OBJ where OBJ[Symbol.asyncIterator]()->ASYNC_ITERATOR
