no commit message

--- a/Languages/Go/go_modules.cli.txt
+++ b/Languages/Go/go_modules.cli.txt
@@ -218,8 +218,7 @@ gopkg.in/[USER/]REPO.vX           #One of the many pre-Go-module way to version 
 
 MODULE ==>                        #Group of PACKAGEs
 
-ENVVAR GO111MODULE                #Decides whether in module-aware mode: "on|off"
-                                  #If "auto" (def), on if [.../]go.mod exists
+ENVVAR GO111MODULE                #Decides whether in module-aware mode: "on" (def), "off" or "auto" ("on" if [.../]go.mod exists)
 
 go.mod                            #File containing line-wise directives (below)
                                   #Location determines the MODULE's root directory:
@@ -228,9 +227,8 @@ go.mod                            #File containing line-wise directives (below)
                                   #Normalized and beautified by any go command that uses it.
                                   #Automatically updated by go get
                                   #  - including adding "require ..."
+                                  #If updated needed when running go build|test, fails.
                                   #Can be manually edited, then go get will work accordingly.
-go build -mod=readonly            #Do not update go.mod. If update needed, fails.
-                                  #Not with go get ...
 go build -modfile=PATH            #Specify a different go.mod, used for go.mod content.
                                   #Module's normal go.mod is still used to locate module's root.
 ENVVAR GOMOD                      #Absolute "PATH" to current go.mod.
