--- a/Languages/Go/go_standard_library.go.txt
+++ b/Languages/Go/go_standard_library.go.txt
@@ -21,14 +21,14 @@ runtime.Version()->STR            #'goX.Y' or 'COMMIT-DATE'
 
 runtime.GOOS                      #OS name
                                   #Among "linux", "darwin", "windows", "freebsd|netbsd|openbsd|dragonfly", "solaris|illumos", "plan9",
-                                  #"aix", "android", "nacl" (Chrome OS), "js" (with GOARCH "wasm")
+                                  #"aix", "android", "ios", "nacl" (Chrome OS), "js" (with GOARCH "wasm")
                                   #Can be set manually with ENVVAR GOOS
 
 runtime.GOARCH                    #CPU architecture
                                   #Among "386|amd64[p32]", "arm[64]", "ppc64[le]", "mips[64][le]", "s390x", "riscv64", "wasm"
                                   #Can be set manually with ENVVAR GOARCH
 ENVVAR GOARM                      #"5|6|7". ARM version, with GOARCH=arm
-ENVVAR GO386                      #"387|sse2". Floating point version, with GOARCH=386
+ENVVAR GO386                      #"softfloat|sse2". Floating point version, with GOARCH=386
 ENVVAR GOMIPS[64]                 #"hardfloat|softfloat". Floating point version, with GOARCH=mips[64][le]
 ENVVAR GOWASM                     #"FEAT,...". Experimental features, with GOARCH=wasm, among "satconv|signext"
 
