no commit message

--- a/Languages/Go/go_build.cli.txt
+++ b/Languages/Go/go_build.cli.txt
@@ -36,8 +36,6 @@ go tool link                      #Can use -buildmode (def: 'exe')
                                   #  - "-msan": -msan flag
                                   #  - -buildmode flag
 
--i                                #Install dependencies' BINARYs
-
 -n                                #Dry run
 -v                                #Verbose: print PACKAGE names
 -x                                #Print the commands.
@@ -280,6 +278,7 @@ go tool asm FILE.s                #Like go tool compile, but from ASM files
 go build -asmflags
  '[IMPORT_PATHS=]ARGS'            #Pass arguments to underlying go tool asm ARGS
 go build -toolexec 'PATH [ARGS]'  #Use a different program than go tool asm under the hood
+                                  #This also sets ENVVAR TOOLEXEC_IMPORTPATH
 
 -o=FILE                           #Output file (def: FILE.o)
 
