--- a/Languages/Go/go_modules.cli.txt
+++ b/Languages/Go/go_modules.cli.txt
@@ -134,6 +134,7 @@ vendor/...                        #Same except:
 vendor/requirements.txt           #Similar to go.mod but for vendor/...
 go mod vendor                     #Creates|updates vendor/..., including requirements.txt
 -v                                #Verbose
+-e                                #Do not fail on errors
 go build -mod=mod                 #Ignore vendor/...
 go build -mod=vendor              #Use vendor/...
                                   #Not needed with Go >=1.14
@@ -152,6 +153,7 @@ REPOSITORY STRUCTURE ==>          #Due to how go modules work, from repository r
                                   #  - go.mod|sum
 
 GIT ==>                           #This doc assumes git, but other VCS (svn|mercurial|Bazaar|Fossil) are supported
+                                  #which can be customized with ENVVAR GOVCS
 
 go build -insecure                #Allow MODULE_PATH to use http: (as opposed to https:)
 ENVVAR GOINSECURE                 #Like -insecure, but as MODULE_PATHS
@@ -263,6 +265,12 @@ replace MODULE_PATH vMODULE_VRSION
 replace (
   ...                             #Instead of using vMODULE_VERSION, use vMODULE_VERSION2
 )                                 #Not used in deep dependencies
+retract vMODULE_VERSION
+retract [vMODULE_VERSION_START,
+ vMODULE_VERSION_END]
+retract (
+  ...                             #Do not allow consumers using those versions.
+)                                 #Useful to deprecate a version.
 
 go mod init ["MODULE_PATH"]       #Creates ./go.mod
                                   #If another Go dependency manager used, migrate it
@@ -271,6 +279,7 @@ go mod init ["MODULE_PATH"]       #Creates ./go.mod
 go mod tidy                       #Removes unused dependencies from go.mod|sum
                                   #Not done automatically
 -v                                #Verbose
+-e                                #Do not fail on errors
 
 go mod edit [GO_MOD_PATH]         #Modifies go.mod
                                   #Does not resolve MODULE|PACKAGEs after modification
@@ -314,6 +323,7 @@ go list IMPORT_PATHS              #Prints all PACKAGEs, one per line
                                   #Cannot use -deps, but can use "all" as argument instead
 -u                                #Show latest MODULE_VERSION
                                   #Only with -m
+-retracted                        #Show "retracted" versions (otherwises hidden)
 
 -f TEMPLATE                       #Of JSON output
                                   #Def: '{{.ImportPath}}'
@@ -453,8 +463,8 @@ go get IMPORT_PATHS               #Automatically run by go build|test|list
 -fix                              #Runs go fix on dependencies
                                   #Only if non-module-aware
 
-go install IMPORT_PATHS           #Very similar to go get, but with fewer flags|capabilities
-                                  #Prefer go get
+go install IMPORT_PATHS           #Very similar to go get
+                                  #Preferred unless -d is needed
 
 go mod download MODULE_PATH_LIST  #Like go go get, but with MODULE_PATH, and does not build PACKAGEs
                                   #Prefer go get
