--- a/Languages/Go/go_standard_library.go.txt
+++ b/Languages/Go/go_standard_library.go.txt
@@ -211,6 +211,7 @@ GODEBUG="madvdontneed=1"          #On Linux, use MADV_DONTNEED instead of MADV_F
                                   #Slower but makes RSS decrease faster.
 GODEBUG="gcshrinkstackoff=1"      #Disables optimizing goroutine stack size. Meant for memory debugging.
 GODEBUG="invalidptr=1"            #Do not crash when storing non-address values in *TYPE. Only meant for debugging.
+GODEBUG="inittrace=1"             #Print debug information about each package init and memory allocation
 
 
                                              /=+===============================+=\
