no commit message

--- a/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
+++ b/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
@@ -612,7 +612,7 @@ TESTUTILS.Simulate.EVENT         ##Trigger EVENT, but still work with virtual DO
                                              \=+===============================+=/
 
 
-react/*                          ##Node module "eslint-plugin-react" (7.22.0)
+react/*                          ##Node module "eslint-plugin-react" (7.24.0)
                                  ##Can use CONF.settings.react:
                                  ##  - createClass 'FUNC' (def: 'createReactClass'): used to create RTYPE
                                  ##    when not using ES6 classes
@@ -620,6 +620,8 @@ react/*                          ##Node module "eslint-plugin-react"
                                  ##  - linkComponents 'RTYPE'_ARR or OBJ: name 'RTYPE', linkAttribute STR (def: 'href')
                                  ##     - RTYPE used instead of <a>
                                  ##     - for rules like react/jsx-no-target-blank
+                                 ##  - componentWrapperFunctions 'PROP' or OBJ: property 'PROP', object 'VAR'
+                                 ##     - function wrapper components
 
 react/prefer-es6-class [STR]     ##Requires either ES6 classes, or ES5 createReactClass()
                                  ##STR: 'always' (def), 'never'
@@ -633,6 +635,11 @@ react/no-multi-comp [OBJ]        ##Avoid multiple RTYPE declarations per file
                                  ##  - ignoreStateless BOOL (def: false): allow if stateless components
 react/forbid-elements [OBJ]      ##Avoid using <RTYPE>, using OBJ.forbid OBJ_ARR: element 'RTYPE', message STR (error message),
                                  ##or shorthand 'RTYPE'_ARR
+
+react/                           ##Avoid initializing RELEM inside another one since it loses state and is less performant.
+ no-unstable-nested-components   ##Unless memoized with React.useCallback()
+ [OBJ]                           ##OBJ:
+                                 ##  - allowAsProps BOOL: if false (def), also disallow inside props, unless prop name starts with render*
 
 react/react-in-jsx-scope         ##React variable must be defined if there is some JSX
 react/require-render-return      ##Must return a value in render()
@@ -714,6 +721,7 @@ react/default-props-match-       ##Avoid defaultProps with no propType
 react/no-unused-prop-types [OBJ] ##Avoid unused propTypes
                                  ##OBJ:
                                  ##  - skipShapeProps BOOL (def: false): ignore PropTypes.shape
+                                 ##  - ignore 'PROP'_ARR
                                  ##  - propWrapperFunctions FUNC_ARR:
                                  ##     - ignore FUNC(PropTypes)
                                  ##     - FUNC can be 'FUNC' or { property 'FUNC' [, object 'VAR'] }
@@ -798,7 +806,9 @@ react/jsx-curly-newline [OBJ|STR]##Newlines around {}
                                  ##STR: 'consistent' (def), 'require', 'forbid'
                                  ##OBJ:
                                  ##  - multiline|singleline 'consistent' (def), 'require', 'forbid'
-react/jsx-newline                ##Newlines after <RTYPE> and {...}
+react/jsx-newline [OBJ]          ##Newlines after <RTYPE> and {...}
+                                 ##OBJ:
+                                 ##  - prevent BOOL (def: false): if true, not if adjacent
 react/jsx-tag-spacing            ##Spaces around < and >
                                  ##OBJ:
                                  ##  - closingSlash STR:
@@ -866,7 +876,8 @@ react/jsx-max-depth [OBJ]        ##Max nesting OBJ.max NUM (def: 2)
 react/jsx-pascal-case [OBJ]      ##Requires <RType> to be PascalCase
                                  ##OBJ:
                                  ##  - allowAllCaps BOOL (def: false)
-                                 ##  - ignore 'RTYPE'_ARR: whitelists
+                                 ##  - allowAllNamespace BOOL (def: false): if true, only in 'VAR' if 'VAR.VAR2'
+                                 ##  - ignore 'RTYPE_GLOB'_ARR: whitelists
 react/boolean-prop-naming [OBJ]  ##Requires PROPs with propTypes.VAR (OBJ.propTypeNames "VAR"_ARR, def "bool") names to
                                  ##match OBJ.rule REGEXP (def: "^(is|has)[A-Z]([A-Za-z0-9]?)+")
                                  ##OBJ:
