no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1547,6 +1547,8 @@ no-extend-native [OBJ]            #Avoid extending native types
 max-classes-per-file [NUM]        #Max NUM (def: 1) CLASS perf file
 fp/no-class                      ##Avoid class
 fp/no-this                       ##Avoid this
+unicorn/
+ no-array-method-this-arguments  ##Avoid this in ARRAY.FUNC(...)
 
 
                                              /=+===============================+=\
@@ -1619,7 +1621,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (33.0.1)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (34.0.1)
 
 unicorn/
  prefer-string-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
@@ -1627,6 +1629,11 @@ unicorn/
  prefer-string-trim-start-end    ##Prefer STR.trimStart|End() over STR.trimLeft|Right()
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
 unicorn/prefer-string-replace-all##Must use STR.replaceAll(STR2) instead of STR.replace(/REGEXP/g) when REGEXP can be a literal STR2
+unicorn/prefer-at [OBJ]          ##Prefer STR|ARR.at(NUM) over STR|ARR[NUM]
+                                 ##OBJ:
+                                 ##  - checkAllIndexAccess BOOL: if false (def), only if NUM is negative
+                                 ##  - getLastElementFunctions 'FUNC_VARR'_ARR (def: ['_|lodash|underscore.last']): also check
+                                 ##    specific methods known to access from the end
 
 unicorn/no-hex-escape            ##Avoid \x... (prefer \u....)
 unicorn/number-literal-case      ##Consistent casing for 0x... 0o... 0b... and NUMe...
@@ -1765,6 +1772,7 @@ require-await                     #Avoid async functions with no await
 no-await-in-loop                  #await inside loops (prefer Promise.all())
 no-return-await                   #Avoid return await VAL (it does same as return VAL)
 no-async-promise-executor         #Avoid new Promise(async FUNC)
+unicorn/prefer-top-level-await   ##Use top-level await when possible
 
 require-atomic-updates            #Avoid GLOBAL_VAR = await FUNC(GLOBAL_VAR) as it creates a delay between GLOBAL_VAR
                                   #being read and written, i.e. introducing race conditions
@@ -2304,3 +2312,5 @@ unicorn/prefer-modern-dom-apis   ##Prefer:
                                  ##  - NODE.replaceWith() over NODE.replaceChild()
                                  ##  - NODE.before() over NODE.insertBefore|AdjacentText|AdjacentElement()
 unicorn/no-document-cookie       ##Prefer cookieStore over document.cookie
+unicorn/require-post-message-
+ target-origin                   ##Require 'ORIGIN'
