--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1084,7 +1084,7 @@ FUNC `...`                                    -|#  - VAL... are each ${EXPR}
 
 STR[NUM]                                        #Read-only. undefined if out of range.
 STR.charAt(NUM)                                 #Same except "" if out of range
-STR.item(NUM)->'CHAR'                        *-|#Like STR[NUM] except -NUM is from end
+STR.at(NUM)->'CHAR'                         *-|~#Like STR[NUM] except -NUM is from end, and is not writable
 
 STR.length                                      #
 
@@ -1512,7 +1512,7 @@ Array.of(VAL...)                              -|#Same as new Array(VAL...) excep
 
 ARR[NUM]                                        #
 ARR?.[NUM]                             14.0.0*-|#Like ARR == null ? undefined : ARR[NUM]
-ARR.item(NUM)->VAL                           *-|#Like STR[NUM] except -NUM is from end
+ARR.at(NUM)->VAL                            *-|~#Like STR[NUM] except -NUM is from end, and is not writable
 
 ARRAYLIKE                                       #Any OBJ which understand OBJ[NUM] and OBJ.length
                                                 #Can use all ARR methods, except concat() using:
