no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1011,6 +1011,29 @@ process.stdin|stdout|stderr                     #Standard streams
 
                                              /=+===============================+=\
                                             /  :                               :  \
+                                            )==:          STREAM/WEB           :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+
+new ReadableStream([OBJ[, OBJ2]])        16.5.0*#OBJ:
+                                         16.5.0*#  - type 'bytes'|undefined
+                                         16.5.0*#  - autoAllocateChunkSize NUM (only when type 'bytes')
+                                         16.5.0*#  - start(RSTREAM_DEFCONTROLLER|RBSTREAM_CONTROLLER)[->PROMISE]
+                                         16.5.0*#  - pull(RSTREAM_DEFCONTROLLER|RBSTREAM_CONTROLLER)->PROMISE
+                                         16.5.0*#  - cancel(VAL)->PROMISE
+                                         16.5.0*#OBJ2:
+                                         16.5.0*#  - highWaterMark NUM
+                                         16.5.0*#  - size(VAL)->NUM
+RSTREAM.locked                           16.5.0*#BOOL
+RSTREAM.cancel([VAL])->PROMISE           16.5.0*#
+RSTREAM.getReader([OPTS])
+ ->RSTREAM_DEFREADER|RSTREAM_BYOBREADER  16.5.0*#
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
                                             )==:              TTY              :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
