no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1016,20 +1016,16 @@ process.stdin|stdout|stderr                     #Standard streams
                                              \=+===============================+=/
 
 
-
-new ReadableStream([OBJ[, OBJ2]])        16.5.0*#OBJ:
-                                         16.5.0*#  - type 'bytes'|undefined
-                                         16.5.0*#  - autoAllocateChunkSize NUM (only when type 'bytes')
-                                         16.5.0*#  - start(RSTREAM_DEFCONTROLLER|RBSTREAM_CONTROLLER)[->PROMISE]
-                                         16.5.0*#  - pull(RSTREAM_DEFCONTROLLER|RBSTREAM_CONTROLLER)->PROMISE
-                                         16.5.0*#  - cancel(VAL)->PROMISE
-                                         16.5.0*#OBJ2:
-                                         16.5.0*#  - highWaterMark NUM
-                                         16.5.0*#  - size(VAL)->NUM
-RSTREAM.locked                           16.5.0*#BOOL
-RSTREAM.cancel([VAL])->PROMISE           16.5.0*#
-RSTREAM.getReader([OPTS])
- ->RSTREAM_DEFREADER|RSTREAM_BYOBREADER  16.5.0*#
+ReadableStream
+ReadableStreamDefaultReader
+ReadableStreamByobReader
+WritableStream
+WritableStreamDefaultWriter
+TransformStream
+ByteLengthQueuingStrategy
+CountQueuingStrategy
+TextEncoderStream                        16.5.0*#See DOM doc
+TextDecoderStream                        16.5.0*#Print experimental warning
 
 
                                              /=+===============================+=\
@@ -3021,6 +3017,7 @@ WORKER|MESSAGEPORT.postMessage                  #Like DOM except:
                                                 #  - VAL2:
                                                 #     - can be SHARED_ARRBUFFER
                                          15.7.0*#     - can be BLOB
+                                         16.5.0*#     - can be RSTREAM|WSTREAM|TSTREAM
                                                 #     - can be FILE_HANDLE or crypto KEY
                                                 #     - when MESSAGEPORT, VAL must be MESSAGEPORT
 WORKER|MESSAGEPORT.on('message', FUNC(VAL))     #Like DOM except:
