--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -56,6 +56,7 @@ NEW TASKS ==>                                   #The following create each of th
                                                 #  - macrotasks are created by I/O code, which includes:
                                                 #     - setTimeout|Interval|Immediate()
                                                 #     - filesystem, network or OS calls
+                                                #        - not streams on their own
                                                 #     - event handlers triggered by browser interaction.
                                                 #       Events triggered directly through JavaScript, which include
                                                 #       Node.js EVENTEMITTER, are sync.
